<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BlockDetailViewController" customModule="EOSBlockSample" customModuleProvider="target">
            <connections>
                <outlet property="jsonTextView" destination="Ayn-X3-Iu3" id="uaJ-3w-nct"/>
                <outlet property="producerLabel" destination="lku-XJ-4wq" id="vET-mT-8ST"/>
                <outlet property="producerSignatureLabel" destination="Xd7-Oa-dgE" id="j1O-Q8-ykZ"/>
                <outlet property="toggleJSONButton" destination="Nua-8W-CbC" id="Di1-EX-6XP"/>
                <outlet property="transactionsCountLabel" destination="rPc-OV-Bz5" id="NTr-f8-GxB"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="WFe-8F-Gig">
                    <rect key="frame" x="10" y="54" width="394" height="65.5"/>
                    <subviews>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="producer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lku-XJ-4wq">
                            <rect key="frame" x="0.0" y="0.0" width="70" height="20.5"/>
                            <accessibility key="accessibilityConfiguration" identifier="producerLabel"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="number of transactions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPc-OV-Bz5">
                            <rect key="frame" x="0.0" y="22.5" width="178" height="20.5"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Producer Signature" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xd7-Oa-dgE">
                            <rect key="frame" x="0.0" y="45" width="148" height="20.5"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                    </subviews>
                </stackView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nua-8W-CbC">
                    <rect key="frame" x="166" y="124.5" width="82" height="30"/>
                    <accessibility key="accessibilityConfiguration" identifier="showJsonButton"/>
                    <state key="normal" title="Show JSON"/>
                </button>
                <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" text="Text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ayn-X3-Iu3">
                    <rect key="frame" x="10" y="159.5" width="394" height="702.5"/>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="jsonTextView"/>
                    <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="12"/>
                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                </textView>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstAttribute="trailing" secondItem="WFe-8F-Gig" secondAttribute="trailing" constant="10" id="K0B-yl-s9u"/>
                <constraint firstItem="Nua-8W-CbC" firstAttribute="top" secondItem="WFe-8F-Gig" secondAttribute="bottom" constant="5" id="Nve-n9-6kS"/>
                <constraint firstItem="Ayn-X3-Iu3" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="OOs-Jn-XDf"/>
                <constraint firstItem="Ayn-X3-Iu3" firstAttribute="top" secondItem="Nua-8W-CbC" secondAttribute="bottom" constant="5" id="bZu-3s-MHU"/>
                <constraint firstItem="WFe-8F-Gig" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="10" id="dU6-0T-i7v"/>
                <constraint firstItem="Nua-8W-CbC" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="dXY-VC-pmC"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="Ayn-X3-Iu3" secondAttribute="bottom" id="gxf-hn-R4u"/>
                <constraint firstItem="WFe-8F-Gig" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="hPL-qK-PKe"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Ayn-X3-Iu3" secondAttribute="trailing" constant="10" id="neh-EC-tTW"/>
            </constraints>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <point key="canvasLocation" x="131.8840579710145" y="153.34821428571428"/>
        </view>
    </objects>
</document>
