...
    private let viewModel: BlockListVMContract = BlockListVM(provider: EosioRpcProvider(endpoint: URL(string: "https://api.eosnewyork.io/v1")!))
    
    override func viewDidLoad() {
        super.viewDidLoad()

        // Set title
        self.title = "Blocks"
        // Set the datasource and delegate.
        blockTableView.dataSource = self
        blockTableView.delegate = self
        // Register the cell.
        blockTableView.register(UITableViewCell.self, forCellReuseIdentifier: "defaultIdentifier")
        // Hide empty separator lines.
...
